Added salmon recipe link to index.html and changed recipe links to an unordered list

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/dal.html">Dal</a>
+        <ul>
+            <li><a href="recipes/dal.html">Dal</a></li>
+            <li><a href="recipes/salmon.html">Salmon</a></li>
+        </ul>
     </body>
 </html>
