--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/dal.html">Dal</a></li>
             <li><a href="recipes/salmon.html">Salmon</a></li>
+            <li><a href="recipes/chickenparmesan.html">Chicken Parmesan</a></li>
         </ul>
     </body>
 </html>
