--- a/recipes/dal.html
+++ b/recipes/dal.html
@@ -10,7 +10,7 @@
             height="300" length="300"
             alt="A picture of the Indian soup dal">
             <h2>A Simple Dal Recipe</h2>
-            <p>This is an easy recipe for Dal, a classic Indian dish!</p>
+            <p>This is an easy recipe for dal, a classic Indian dish!</p>
             <h3>Ingredients</h3>
             <ul>
                 <li>1 cup masoor dal</li>
