--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -8,9 +8,9 @@
         <h1>Salmon</h1>
         <img src="https://images.getbento.com/accounts/92b44d6a0fd2ac5e103dd6777bee4102/media/images/72426salmon_website.jpg?w=1200&fit=crop&auto=compress,format&crop=focalpoint&fp-x=0.5&fp-y=0.5"
             height="300" length="300"
-            alt="A picture of salmon with rubbing salt on it">
+            alt="A picture of chicken parmesan">
             <h2>Tom Douglas Rub With Love Salmon</h2>
-            <p>This is an easy recipe for Salmon rubbed with Tom Douglas's Salmon Rub</p>
+            <p>This is an easy recipe for salmon rubbed with Tom Douglas's Salmon Rub</p>
             <h3>Ingredients</h3>
             <ul>
                 <li>Olive oil for brushing</li>
