Add styles to style.css

--- a/recipes/chickenparmesan.html
+++ b/recipes/chickenparmesan.html
@@ -3,66 +3,69 @@
     <head>
         <meta charset="UTF-8">
         <Title>Chicken Parmesan Recipe</Title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Chicken Parmesan</h1>
+        <h1 class="recipe-page">Chicken Parmesan</h1>
         <img src="https://hips.hearstapps.com/hmg-prod/images/chicken-parmesan-lead-644042295b9c4.jpg?crop=1xw:1xh;center,top&resize=980:*"
             height="300" length="300"
             alt="A picture of the Indian soup dal">
-            <h2>Chicken Parmesan</h2>
-            <p>An easy recipe for chicken parmesan</p>
-            <h3>Ingredients</h3> 
-            <h4>Marinara Sauce</h4>
-            <ul>
-                <li>3 Tbsp. extra-virgin olive oil</li>
-                <li>1 small yellow onion, finely chopped</li>
-                <li>6 cloves garlic, finely chopped</li>
-                <li>1 (28-oz.) can crushed tomatoes</li>
-                <li>2 large sprigs basil</li>
-                <li>Kosher salt</li>
-                <li>Freshly ground black pepper</li>
-            </ul>
-            <h4>Chicken</h4>
-            <ul>
-                <li>1 c. panko bread crumbs</li>
-                <li>1 tsp. garlic powder</li>
-                <li>2 c. finely grated Parmesan, divided</li>
-                <li>3/4 c. all-purpose flour</li>
-                <li>2 large eggs</li>
-                <li>6 (1/4"-thick) boneless, skinless chicken cutlets (about 1 1/2 lb. total)</li>
-                <li>Kosher salt</li>
-                <li>Freshly ground black pepper</li>
-                <li>1 c. shredded mozzarella</li>
-                <li>1 c. vegetable or canola oil</li>
-                <li>Chopped fresh basil, for serving</li>
-            </ul>
-            <h3>Steps</h3>
-           <h4>Marinara Sauce</h4>
-           <ol>
-                <li>In a medium pot over medium heat, heat oil. Add onion and garlic, stir to combine, 
-                    and reduce heat to low. Cover and cook, stirring occasionally, 10 minutes. 
-                    Uncover and cook, stirring occasionally, until onion is translucent, softened, and fragrant, 
-                    about 5 minutes more.</li>
-                <li>Stir in tomatoes and basil. Bring to a boil, then reduce heat to medium-low and simmer, 
-                    stirring occasionally, until slightly thickened and flavors have melded, about 30 minutes; 
-                    season with salt and pepper. Discard basil.</li>
-           </ol>
-           <h4>Chicken</h4>
-           <ol>
-                <li>In a shallow bowl, combine panko, garlic powder, and 1 cup Parmesan. 
-                    Into another shallow bowl, pour flour. In a third shallow bowl, beat eggs with 1 tablespoon water.</li>
-                <li>Pat chicken dry; season with salt and pepper. Dip into flour, shaking off excess, 
-                    then into egg, then into panko mixture, gently pressing to adhere.</li>
-                <li>In a small bowl, mix mozzarella and remaining 1 cup Parmesan. </li>
-                <li>Heat broiler. In a large, heavy pot over medium heat, heat oil until a deep-fry or instant-read thermometer 
-                    registers 350°; if it smokes a bit, that’s okay. Set a wire rack in a baking sheet.</li>
-                <li>Working one at a time, fry chicken until one side is golden brown, about 1 minute. Flip and 
-                    continue to fry until golden brown on the other side and the sound of the frying chicken gets 
-                    slightly louder—this is the moisture evaporating from the chicken—about 1 minute more. Transfer 
-                    to prepared rack. Repeat with remaining chicken. Spoon some marinara over chicken. Sprinkle with cheese 
-                    mixture.</li>
-                <li>Broil, watching carefully, until cheese is melted and brown spots form, about 2 minutes.</li>
-                <li>Divide chicken among plates. Top with basil. Serve with remaining marinara alongside.</li>
-           </ol>
+        <h2>Chicken Parmesan</h2>
+        <p>An easy recipe for chicken parmesan</p>
+        <h3 class="ingredients">Ingredients</h3> 
+        <h4>Marinara Sauce</h4>
+        <ul>
+            <li>3 Tbsp. extra-virgin olive oil</li>
+            <li>1 small yellow onion, finely chopped</li>
+            <li>6 cloves garlic, finely chopped</li>
+            <li>1 (28-oz.) can crushed tomatoes</li>
+            <li>2 large sprigs basil</li>
+            <li>Kosher salt</li>
+            <li>Freshly ground black pepper</li>
+        </ul>
+        <h4>Chicken</h4>
+        <ul>
+            <li>1 c. panko bread crumbs</li>
+            <li>1 tsp. garlic powder</li>
+            <li>2 c. finely grated Parmesan, divided</li>
+            <li>3/4 c. all-purpose flour</li>
+            <li>2 large eggs</li>
+            <li>6 (1/4"-thick) boneless, skinless chicken cutlets (about 1 1/2 lb. total)</li>
+            <li>Kosher salt</li>
+            <li>Freshly ground black pepper</li>
+            <li>1 c. shredded mozzarella</li>
+            <li>1 c. vegetable or canola oil</li>
+            <li>Chopped fresh basil, for serving</li>
+        </ul>
+        
+        <h3>Steps</h3>
+        <h4>Marinara Sauce</h4>
+        <ol>
+            <li>In a medium pot over medium heat, heat oil. Add onion and garlic, stir to combine, 
+                and reduce heat to low. Cover and cook, stirring occasionally, 10 minutes. 
+                Uncover and cook, stirring occasionally, until onion is translucent, softened, and fragrant, 
+                about 5 minutes more.</li>
+            <li>Stir in tomatoes and basil. Bring to a boil, then reduce heat to medium-low and simmer, 
+                stirring occasionally, until slightly thickened and flavors have melded, about 30 minutes; 
+                season with salt and pepper. Discard basil.</li>
+        </ol>
+        <h4>Chicken</h4>
+        <ol>
+            <li>In a shallow bowl, combine panko, garlic powder, and 1 cup Parmesan. 
+                Into another shallow bowl, pour flour. In a third shallow bowl, beat eggs with 1 tablespoon water.</li>
+            <li>Pat chicken dry; season with salt and pepper. Dip into flour, shaking off excess, 
+                then into egg, then into panko mixture, gently pressing to adhere.</li>
+            <li>In a small bowl, mix mozzarella and remaining 1 cup Parmesan. </li>
+            <li>Heat broiler. In a large, heavy pot over medium heat, heat oil until a deep-fry or instant-read thermometer 
+                registers 350°; if it smokes a bit, that’s okay. Set a wire rack in a baking sheet.</li>
+            <li>Working one at a time, fry chicken until one side is golden brown, about 1 minute. Flip and 
+                continue to fry until golden brown on the other side and the sound of the frying chicken gets 
+                slightly louder—this is the moisture evaporating from the chicken—about 1 minute more. Transfer 
+                to prepared rack. Repeat with remaining chicken. Spoon some marinara over chicken. Sprinkle with cheese 
+                mixture.</li>
+            <li>Broil, watching carefully, until cheese is melted and brown spots form, about 2 minutes.</li>
+            <li>Divide chicken among plates. Top with basil. Serve with remaining marinara alongside.</li>
+        </ol>
+        
     </body>
 </html>
