--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+        <h1 class="front-page">Odin Recipes</h1>
+        <ul class="recipe-list">
             <li><a href="recipes/dal.html">Dal</a></li>
             <li><a href="recipes/salmon.html">Salmon</a></li>
             <li><a href="recipes/chickenparmesan.html">Chicken Parmesan</a></li>
