--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <Title>Salmon Recipe</Title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Salmon</h1>
+        <h1 class="recipe-page">Salmon</h1>
         <img src="https://images.getbento.com/accounts/92b44d6a0fd2ac5e103dd6777bee4102/media/images/72426salmon_website.jpg?w=1200&fit=crop&auto=compress,format&crop=focalpoint&fp-x=0.5&fp-y=0.5"
             height="300" length="300"
             alt="A picture of chicken parmesan">
             <h2>Tom Douglas Rub With Love Salmon</h2>
             <p>This is an easy recipe for salmon rubbed with Tom Douglas's Salmon Rub</p>
-            <h3>Ingredients</h3>
+            <h3 class="ingredients">Ingredients</h3>
             <ul>
                 <li>Olive oil for brushing</li>
                 <li>About 5 tablespoons 'Rub with Love' Salmon Rub</li>
@@ -19,8 +20,8 @@
                 <li>1 lime</li>
                 <li>1 lemon</li>
             </ul>
-            <h3>Steps</h3>
-           <ol>
+            <h3 class="steps">Steps</h3>
+            <ol>
                 <li>Fire up the charcoal grill for medium-hot direct heat.</li>
                 <li>Lightly brush the salmon on both sides with oil.</li>
                 <li>Generously coat the salmon fillets on both sides with the Salmon Rub.</li>
